environment/network/destination_rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: caldera
  namespace: battlefield
spec:
  host: caldera
---
