environment/network/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: battlefield-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: battleinfo
spec:
  hosts:
  - "*"
  gateways:
  - battlefield-gateway
  tcp:
  - match:
    - port: 80
  route:
  - destination:
    host: caldera
    port:
      number: 8888
